--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
     "nodemon": "^2.0.20",
-    "qs": "^6.11.2"
+    "qs": "^6.11.2",
+    "queue-fifo": "^0.2.6"
   }
 }
